@@ -3,27 +3,11 @@
 https://tomcat.apache.org/
 
 
-## Apache tomcat and solr memory, hm.
+## Apache tomcat and solr one JVM or two JVM?
 
-There are two places, one for apache tomcat and one for solr.
+#### Scenario A:
 
-You've hit a common point of confusion when running Solr inside Tomcat! 
-
-The core issue is that Tomcat and Solr do not run in separate Java Virtual Machines (JVMs) in this deployment scenario; 
-* they both run within the single Tomcat JVM.Therefore, you only need to set the heap memory ($\text{-Xms}$ and $\text{-Xmx}$) once, on the Tomcat process.
-
-The Single JVM Principle 🧠
-When you deploy Solr as a .war file (e.g., solr.war) into a standard Tomcat installation:
-
-Tomcat Starts the JVM: Tomcat is launched as a single process running the JVM.
-
-Solr is an Application: Solr is deployed as a web application (a Servlet) inside the already running Tomcat application server.
-
-Shared Memory: Both the Tomcat management threads and the Solr application threads draw memory from the same single Java heap defined by the Tomcat configuration.
-
-There is no separate "Solr process" or "Solr heap" to configure.
-
-Solr/Tomcat Heap Sizing ($\text{-Xms}$ and $\text{-Xmx}$)
+When you deploy Solr as a .war file (e.g., solr.war) into a Tomcat server:Single JVM: Tomcat starts a single Java process (JVM).Solr as a Servlet: Solr is loaded as a web application (a Servlet) within that single Tomcat process.Shared Heap: Both the Tomcat management components and the Solr application share the exact same memory heap. You configure the JVM memory settings ($\text{-Xms}$, $\text{-Xmx}$) only on the Tomcat process itself. There is no separate "Solr heap" to configure.
 
 Solr benefits greatly from having a large, stable heap size for caching and search operations.
 
@@ -39,9 +23,134 @@ Solr's memory limit is the JVM's heap memory limit. There's no separate configur
 
 https://serverfault.com/questions/418342/limiting-solr-not-java-to-use-a-certain-amount-of-memory
 
-02393364: You just need to modify the parameter in xxxxxONESolrWindowsService.exe.config file under Solr only.
+***Thats what she said***
+02393364: You just need to modify the parameter in xxxxxONESolrWindowsService.exe.config file under Solr only. 
 
-## Memory settings
+#### Scenario B:
+
+Since you have two separate Java services running on the same machine—Tomcat and a Standalone Solr service—you must consider and tune the memory allocation for both processes.
+
+This statement would be true if you were running:
+
+Process 1: A Tomcat server in one JVM.
+
+Process 2: A Standalone Solr instance (e.g., started with bin/solr start) in a second, separate JVM.
+
+#### How to Know You Have Two Separate JVMs
+
+Powershell List processes
+
+```ps1
+
+Get-CimInstance Win32_Process -Filter "Name like '%java.exe' OR Name like '%tomcat10.exe' OR Name LIKE '%solr%.exe'" | 
+    Select-Object ProcessId, Name, CommandLine | 
+    Format-List
+
+```
+Powershell Find the parent
+
+```ps1
+Get-CimInstance Win32_Process -Filter "Name like '%java.exe' OR Name like '%tomcat10.exe' OR Name LIKE '%solr%.exe'" | 
+    Select-Object ProcessId, ParentProcessId, Name, CommandLine | 
+    Format-List
+```
+
+
+```log
+ProcessId       : 5276
+ParentProcessId : 704
+Name            : tomcat10.exe
+CommandLine     : "C:\Program Files\Common Files\DataTech Shared\Tomcat10.1.16\bin\Tomcat10.exe" //RS//Tomcat10
+
+ProcessId       : 8560
+ParentProcessId : 704
+Name            : datatechONESolrWindowsService.exe
+CommandLine     : "C:\Program Files\DataTech\datatechONE\SolrService\datatechONESolrWindowsService.exe"
+
+ProcessId       : 11824
+ParentProcessId : 8560
+Name            : java.exe
+CommandLine     : "C:\Program Files\Eclipse Adoptium\jdk-17.0.13.11-hotspot\bin\java.exe" -server -Duser.timezone=UTC -Xms4G -Xmx8G -Xss256k -XX:+UseG1GC -XX:+PerfDisableSharedMem -XX:+P
+                  arallelRefProcEnabled -XX:MaxGCPauseMillis=250 -XX:+UseLargePages -XX:+AlwaysPreTouch "-Xlog:gc*:file=\"C:\Program Files\Common Files\DataTech shared\solr-9.6.1\server
+                  \logs\solr_gc.log\":time,uptime:filecount=9,filesize=20M" -Dsolr.log.dir="C:\Program Files\Common Files\DataTech shared\solr-9.6.1\server\logs" -Dlog4j.configurationFi
+                  le="file:///C:\Program Files\Common Files\DataTech shared\solr-9.6.1\server\resources\log4j2.xml" -Dsolr.solr.home="C:\Program Files\Common Files\DataTech shared\solr
+                  -9.6.1\server\solr" -Dsolr.install.dir="C:\Program Files\Common Files\DataTech shared\solr-9.6.1" -Dsolr.enableRemoteStreaming="true" -Dsolr.enableStreamBody="true" -D
+                  solr.default.confdir="C:\Program Files\Common Files\DataTech shared\solr-9.6.1\server\solr\configsets\_default\conf" -Djetty.home="C:\Program Files\Common Files\AspenT
+                  ech shared\solr-9.6.1\server" -Djava.io.tmpdir="C:\Program Files\Common Files\DataTech shared\solr-9.6.1\server\tmp" -DSTOP.PORT=7983 -DSTOP.KEY=solrrocks -Djetty.host
+                  =0.0.0.0 -Djetty.port=8983 -jar "C:\Program Files\Common Files\DataTech shared\solr-9.6.1\server\start.jar" --module=http ""
+
+```
+Here's a breakdown of the process hierarchy and the key information revealed:
+
+The ParentProcessId column clearly shows the "family tree" of your services:
+
+* ParentProcessId 704 is almost certainly the PID for services.exe (or in some cases, svchost.exe), which is the main Service Control Manager on Windows. This process is responsible for launching all other services.
+* Both tomcat10.exe and datatechONESolrWindowsService.exe are children of PID 704, confirming they are both running as independent Windows Services.
+* ProcessId 8560 (datatechONESolrWindowsService.exe) is the dedicated service wrapper for Solr.
+* Conclusion: The datatechONESolrWindowsService.exe wrapper is the process that launched the Java Virtual Machine (JVM) running your Solr application.
+* If Tomcat is in IIS, it means Tomcat is running behind IIS, which acts as a reverse proxy or front-end web server.
+* This setup explains why you didn't see a second java.exe process in your previous results.
+
+Key Configuration Details from the Solr JVM
+
+* Configuration Area,Command Line Parameter,Value/Setting
+* Java Version,(Path),JDK 17 (jdk-17.0.13.11-hotspot)
+* Initial Memory,-Xms4G,4 GB
+* Maximum Memory,-Xmx8G,8 GB
+* Garbage Collector,-XX:+UseG1GC,G1 Garbage Collector
+* Solr Data Path,"-Dsolr.solr.home=""...""",Solr's index and configuration directory: C:\Program Files\Common Files\Datatech shared\solr-9.6.1\server\solr
+* Server Port,-Djetty.port=8983,Solr is listening on TCP port 8983.
+* Startup File,"-jar ""...""",Solr is started using the main JAR file: C:\Program Files\Common Files\Datatech shared\solr-9.6.1\server\start.jar
+
+
+Or Using Windows Task Manager (User-Friendly)
+
+* Open Task Manager (Ctrl + Shift + Esc, or right-click the taskbar and select Task Manager).
+* Go to the Details tab.
+* Look for processes named java.exe or javaw.exe (or sometimes just Java(TM) Platform SE binary in the Processes tab).
+* If you see multiple instances of java.exe (or similar), each one represents a separate JVM process.
+
+* To verify which application each JVM is running, you'll need the Command Line column:
+* Right-click on any column header (like "Name" or "PID").
+* Select Select columns (or similar option).
+* Check the box for Command line.
+* The "Command line" column will show the full command used to start each JVM, which often includes the name of the main class or the .jar file. This lets you distinguish between your applications.
+
+## Example memory settings
+
+Solr has one major memory requirement that often catches people out:
+
+ * OS Disk Cache (MMap): Solr heavily uses the OS Disk Cache (memory-mapped files, or MMap) for its main index files. This memory is outside of the JVM's maximum heap (-Xmx).
+ * The 50% Rule of Thumb: On a dedicated server running only Solr, the general rule is: never set the Solr Max Heap (-Xmx) higher than 50% of the physical RAM. This ensures the other 50% is free for the OS to use as disk cache for the index, which is critical for search performance.
+Combined Tuning Strategy
+
+When running both Tomcat and Solr on the same server:
+
+ * Calculate Total JVM Requirement: Decide on the maximum required heap for your Tomcat application and for Solr.
+ * Solr's Priority: Solr is usually the more memory-hungry component. Start by allocating a reasonable, but conservative, amount of heap to Solr (e.g., 1/3 to 1/2 of total RAM, max).
+ * Tomcat's Share: Allocate the remaining memory to Tomcat, based on its specific application needs. Tomcat generally needs less than Solr unless you are hosting a huge application.
+ * The OS Buffer: Ensure that the sum of (\text{Tomcat -Xmx} + \text{Solr -Xmx}) is significantly less than the total physical RAM (ideally leaving 2-4 GB or at least 25% free) to allow the OS and Solr's disk caching to operate effectively.
+
+| Example: 16 GB Server | Allocation | Tuning Files |
+|---|---|---|
+| Total Physical RAM | 16 GB | N/A |
+| Solr Max Heap | 6 GB (-Xmx6g) | solr.exe.conf or solr.in.cmd |
+| Tomcat Max Heap | 4 GB (-Xmx4g) | tomcatXw.exe GUI / setenv.bat |
+| Reserved for OS/Cache | 6 GB (16 GB - 10 GB) | Critical for Solr's performance |
+
+You must monitor the server's overall CPU and memory usage after tuning to find the optimal balance for your specific workload.
+
+***That configuration seems reasonable as a starting point for those two applications on a server with 64 GB of RAM***
+
+Total Max Allocation Percentage of 64 GB
+
+* Tomcat/Apache 1 GB 2 GB 2 GB \sim 3.1\%
+* Solr 4 GB 8 GB 8 GB 12.5\%
+
+Total Max JVM Heap 5 GB 10 GB 10 GB \sim 15.6\%
+
+
+## Memory settings Tomcat Apache
 
 If Tomcat is installed as a service:
 
@@ -59,6 +168,84 @@ Modify JVM Arguments: In the "Java Options" text area, add or modify the JVM arg
 ![heap memory](https://github.com/spawnmarvel/quickguides/blob/main/apache_tomcat_and_solr/images/heap.png)
 
 Apply and Restart: Click "Apply," then "OK," and restart the Tomcat service.
+
+# Solr
+
+https://solr.apache.org/guide/solr/latest/deployment-guide/jvm-settings.html
+
+## Memory settings
+
+Any of the following may be occurring: Search may be slow, have long pauses, slow startup, or failures encountered when "java.lang.OutOfMemoryError: Java heap space".
+
+This JVM-Memory percent level can be adjusted with the Maximum Heap Space setting (-Xmx) described below.
+
+* Do not set the Maximum Heap Space too low since that will lead to a JVM-Memory percent level greater than 75% which can slow search responsiveness, or in extreme cases will cause OutOfMemoryException failures.
+
+* Do not set the Maximum Heap Space too high even if plenty of physical memory is available, because that can result in noticeable random pauses, and can result in extended pauses when garbage collecting. Larger heap sizes will take longer for garbage collection.
+
+* Do not set the Maximum Heap Space so high as to restrict physical memory available for the operating system resulting in excessive swapping of memory or limit OS cache or other memory resources which might impact performance.
+
+xxx.exe.config
+
+```code
+<add key="JavaParams" value="-Xms512m -Xmx1G -Xss256k -XX:+UseG1GC -XX:+PerfDisableSharedMem -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=250 -XX:+UseLargePages -XX:+AlwaysPreTouch"/>
+
+After update to 1.5 Gig:
+<add key="JavaParams" value="-Xms512m -Xmx1536m -Xss256k -XX:+UseG1GC -XX:+PerfDisableSharedMem -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=250 -XX:+UseLargePages -XX:+AlwaysPreTouch"/>
+```
+
+The SolrWindowsService in the Windows Services should be restarted after modifying these settings.
+
+Monitor the memory consumption.
+
+* If it is ever up to 75%, then try increasing again as needed.
+
+![solr memory](https://github.com/spawnmarvel/quickguides/blob/main/apache_tomcat_and_solr/images/solr.png)
+
+## Index and Optimization
+
+Whether you need to optimize your Solr index, and how often, depends heavily on your specific use case, indexing frequency, and performance requirements.
+Here's a breakdown:
+Do We Really Need To Optimize?
+Generally, less often than you might think, and sometimes not at all.
+
+ * Solr (Lucene) already merges segments automatically. Lucene's merge policy is designed to automatically merge small index segments into larger, more efficient ones in the background. This process is less disruptive than a full optimization.
+ * Manual optimization is a heavy operation. A full Solr "optimize" (also called a "force merge") operation merges all segments into a single, large segment (by default). This is very CPU and I/O intensive and can severely impact query performance while it's running, as well as temporarily evicting data from the OS file cache.
+
+### Scan index once a week best practice
+
+Running the optimization 2 hours before the weekly scan is generally inefficient and potentially wasteful, depending on how your scan is executed.
+The optimal time for a full index optimization is after a large batch of indexing, not before.
+
+1. Weekly Scan / Indexing | Starts at T=0 | Run the full scan and index all new/updated documents
+2. Final Commit | Ends at T=X | Issue a final hardCommit to ensure all data is persisted and searchable.
+3. Optimization | T=X + 5 mins (immediately after commit) | Run the full index optimization
+- Consolidates all the small segments created during the indexing process into one or a few large, efficient segments. This is when it provides the greatest benefit.
+
+### Optimization timeout
+
+This behavior is a very common and expected symptom of a long-running, resource-intensive operation like a full Solr index optimization.
+It strongly suggests that the optimization is running for longer than your client's configured request timeout.
+
+* First Try (Timeout) | 1. Your client (the tool/script sending the command) sends the optimize=true request to Solr.,  it takes a long time
+- - The optimization process continues to run in the background on the Solr server, unaware the client disconnected. |
+* Second Try (Success) | 1. You, or your automation, immediately retry the optimize=true request
+- -The first attempt started the work; the second attempt merely benefited from the first attempt finishing the work in the background.
+
+Recommended Solutions
+You have two primary ways to fix this, depending on your environment:
+
+1. The Immediate Fix (Increase Client Timeout)
+
+The simplest solution is to change the configuration of the client that is making the optimization call.
+* Action: Increase the request timeout of your client (Java application, Python script, or whatever is running the cURL/API call) to a value you know is safely longer than the optimization time (e.g., 1 \text{ hour} = 3,600,000 \text{ ms}).
+
+2. The Best Practice Fix (Change Schedule & Index Swapping)
+
+To solve the underlying issue of running a high-impact task and to follow the best practices discussed earlier:
+ * Move Optimization: Schedule the optimization to run after the weekly scan, not before.
+
+### Delete index 
 
 ## Tomcat Logs: Locations, Types, Configuration, and Best Practices
 
@@ -164,43 +351,11 @@ Since the Windows service wrapper for Tomcat lacks a native rotation mechanism f
       * Less commonly, utilities like Apache's **`rotatelogs`** (often used with Apache HTTP Server) can be adapted, but this requires significant configuration and is usually considered overkill.
 
 
-### Temporary files
+### Powershell temporary files moved to F:\LogsTomcatTemp delete
 
-# Solr
 
-https://solr.apache.org/guide/solr/latest/deployment-guide/jvm-settings.html
+ps_delete_uploaded_files.ps1
 
-## Memory settings
+### Simple Log remover after self roll over
 
-Any of the following may be occurring: Search may be slow, have long pauses, slow startup, or failures encountered when "java.lang.OutOfMemoryError: Java heap space".
-
-This JVM-Memory percent level can be adjusted with the Maximum Heap Space setting (-Xmx) described below.
-
-* Do not set the Maximum Heap Space too low since that will lead to a JVM-Memory percent level greater than 75% which can slow search responsiveness, or in extreme cases will cause OutOfMemoryException failures.
-
-* Do not set the Maximum Heap Space too high even if plenty of physical memory is available, because that can result in noticeable random pauses, and can result in extended pauses when garbage collecting. Larger heap sizes will take longer for garbage collection.
-
-* Do not set the Maximum Heap Space so high as to restrict physical memory available for the operating system resulting in excessive swapping of memory or limit OS cache or other memory resources which might impact performance.
-
-xxx.exe.config
-
-```code
-<add key="JavaParams" value="-Xms512m -Xmx1G -Xss256k -XX:+UseG1GC -XX:+PerfDisableSharedMem -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=250 -XX:+UseLargePages -XX:+AlwaysPreTouch"/>
-
-After update to 1.5 Gig:
-<add key="JavaParams" value="-Xms512m -Xmx1536m -Xss256k -XX:+UseG1GC -XX:+PerfDisableSharedMem -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=250 -XX:+UseLargePages -XX:+AlwaysPreTouch"/>
-```
-
-The SolrWindowsService in the Windows Services should be restarted after modifying these settings.
-
-Monitor the memory consumption.
-
-* If it is ever up to 75%, then try increasing again as needed.
-
-![solr memory](https://github.com/spawnmarvel/quickguides/blob/main/apache_tomcat_and_solr/images/solr.png)
-
-## Index
-
-### Scan index once a week, use reconsile
-
-### Delete index 
+ps_delete_tomcat10-stdout.ps1
